# numberrecognizer

./: CMakeLists.txt  Makefile  README.md  main.cpp
src/: main.cpp
src/lib/: AI_Trainer.cpp  MNISTLoader.cpp  NeuralNetwork.cpp  grid.cpp  matrix.cpp  numberdisplay.cpp  test.cpp
src/lib/include/: AI_Trainer.h  MNISTLoader.h  NeuralNetwork.h  TrainingConfig.h  grid.h  matrix.h  numberDisplay.h  numberdisplay.h  test.h
src/src/: main.cpp
src/src/lib/: AI_Trainer.cpp  numberDisplay.cpp
src/src/lib/include/: AI_Trainer.h  grid.h
src/util/: vector2.cpp  vector2.h
